# game-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/GameEngineClasses/: BasePrimitive.cpp  BasePrimitive.hpp  BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  CameraFPS.cpp  CameraFPS.hpp  Color.cpp  Color.hpp  CompoundPrimitive.cpp  CompoundPrimitive.hpp  Cube.cpp  Cube.hpp  Game.cpp  Game.hpp  InputDefinitions.h  InputHandler.cpp  InputHandler.hpp  Model.cpp  Model.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  Vertex3D.cpp  Vertex3D.hpp
